k8s/rook-ceph/cluster/rook-ceph-dashboard-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rook-ceph-dashboard
  namespace: rook-ceph
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ceph.oliverilp.ee
spec:
  parentRefs:
    - name: traefik-internal-gateway
      namespace: traefik
      kind: Gateway
      group: gateway.networking.k8s.io	
  hostnames:
    - ceph.oliverilp.ee
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: rook-ceph-mgr-dashboard
          kind: Service
          group: ''
          port: 7000
          weight: 1
